@@ -1,5 +1,9 @@
 2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el (soap-decode-date-time): Improve docstring.
+
+2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el (soap-xmlschema-imports): Remove variable.
 	(soap-parse-schema): Add wsdl argument.  Look up XML schema
 	imports from wsdl.
